# prac1

./: .actrc  .actrc.backup  .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: build-ci-image.yml
config/: global-config.schema.json
devops/: Dockerfile.act-ci  build-ci-image.sh  check-docker-status.sh  cleanup-docker.sh  fix-image-network-issues.sh  precompile-dependencies.sh  push-image.sh  run-all-ci.sh  run-local-ci-collateral-vault.sh  run-local-ci-ephemeral-vault.sh  run-local-ci-funding-rate.sh  run-local-ci-liquidation-engine.sh  run-local-ci-oracle.sh  run-local-ci-position-mgmt.sh  run-local-ci-settlement-relayer.sh  run-local-ci-solana-examples.sh  test-ci-with-act.md  test-sccache-in-image.sh
docs/2025-12-02/: frontend-knowledge-transfer.md  (+3 more)
examples/solana-examples/anchor-examples/examples-rust/: .gitignore  Cargo.toml  README.md
examples/solana-examples/anchor-examples/examples-rust/src/: 01_basic_setup.rs  02_account_operations.rs  03_transactions.rs  04_pda_examples.rs  05_token_operations.rs
examples/solana-examples/rust-scripts/: Cargo.toml
examples/solana-examples/rust-scripts/src/: main.rs
examples/solana-examples/rust-scripts/src/examples/: airdrop.rs  connect_localnet.rs  create_account.rs  get_balance.rs  mod.rs  pda_basics.rs  send_transaction.rs  token_basics.rs
technical-docs/: godark-master-architecture-2025-12-02.md
web3/: IMPLEMENTATION_SUMMARY.md  LOCALNET_SETUP.md  README.md  REQUIREMENTS_ALIGNMENT.md  USDT_FAUCET_ALTERNATIVES.md  next.config.ts  package.json
web3/app/: globals.css  (+2 more)
(+197 files in other folders)
