[package]
name = "solana-examples-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
spl-token = "4.0"
bs58 = "0.5"

[[bin]]
name = "solana-examples"
path = "src/main.rs"

